# mmm_loreal

./: .gitignore  README.md  pyproject.toml
data/: Final_df_excution.csv  Final_df_investment.csv
notebooks/: Virgile.ipynb  augustin.ipynb  online_charles.ipynb
scripts/: merge.py  split_excel_to_csv.py
