[project]
name = "MMM_loreal"
version = "0.1.0"
description = "MMM_for_loreal"

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "ipykernel>=6.25.0",
    "openpyxl>=3.1.2",
    "holidays>=0.63",
    "streamlit>=1.41.1",
    "prophet>=1.1.6",
    "statsmodels>=0.14.0",
]
requires-python = ">=3.12"
